# libscl

./: CMakeLists.txt
include/libscl/: SCL.h
